Fix: Carousel 버튼 z-index 수정

--- a/src/css/carousel.css
+++ b/src/css/carousel.css
@@ -30,7 +30,6 @@
     align-items: center;
     justify-content: center;
     box-shadow: 0px 3px 10px black;
-    z-index: 1;
 }
 .carousel-btn:hover{
     opacity: 1;
